Début de liste de lecture, reste à gérer types non compatibles

--- a/MyWindowsMediaPlayer/MainWindow.xaml
+++ b/MyWindowsMediaPlayer/MainWindow.xaml
@@ -15,7 +15,7 @@
             <Menu DockPanel.Dock="Top">
                 <MenuItem Header="_Fichier">
                     <MenuItem x:Name="openButton" Header="_Ouvrir"/>
-                    <MenuItem x:Name="playListOpenButton" Header="_Ajouter à la list de lecture"/>
+                    <MenuItem x:Name="addToPlaylistButton" Header="_Ajouter à la liste de lecture"/>
                     <MenuItem x:Name="closeButton" Header="_Fermer"/>
                     <MenuItem x:Name="recentFileButton" Header="_Fichier récents"/>
                     <Separator />
@@ -49,7 +49,7 @@
                             </StackPanel>
                         </DockPanel>
                         <DockPanel Grid.Row="1">
-                            <ListView x:Name="list" Margin="2"  ItemsSource="{Binding Path=playList}">
+                            <ListView x:Name="list" Margin="2"  ItemsSource="{Binding Path=_playlist}">
                                 <ListView.View>
                                     <GridView  AllowsColumnReorder="True" ColumnHeaderToolTip="List de lecture">
                                         <GridViewColumn Header="Titre" Width="Auto" DisplayMemberBinding="{Binding Path=titre}"/>
