Playlist stockée correctement

--- a/MyWindowsMediaPlayer/MainWindow.xaml
+++ b/MyWindowsMediaPlayer/MainWindow.xaml
@@ -49,11 +49,11 @@
                             </StackPanel>
                         </DockPanel>
                         <DockPanel Grid.Row="1">
-                            <ListView x:Name="list" Margin="2"  ItemsSource="{Binding Path=_playlist}">
+                            <ListView x:Name="list" Margin="2"  ItemsSource="{Binding Path=Playlist.Playlist}">
                                 <ListView.View>
-                                    <GridView  AllowsColumnReorder="True" ColumnHeaderToolTip="List de lecture">
-                                        <GridViewColumn Header="Titre" Width="Auto" DisplayMemberBinding="{Binding Path=titre}"/>
-                                        <GridViewColumn Header="Durée" Width="Auto" DisplayMemberBinding="{Binding Path=duree}"/>
+                                    <GridView  AllowsColumnReorder="True" ColumnHeaderToolTip="Liste de lecture">
+                                        <GridViewColumn Header="Titre" Width="Auto" DisplayMemberBinding="{Binding Path=Title}"/>
+                                        <GridViewColumn Header="Durée" Width="Auto" DisplayMemberBinding="{Binding Path=PrettyDuration}"/>
                                     </GridView>
                                 </ListView.View>
                             </ListView>
