Début de la sauvegarde de playlist

--- a/MyWindowsMediaPlayer/MainWindow.xaml
+++ b/MyWindowsMediaPlayer/MainWindow.xaml
@@ -16,9 +16,11 @@
                 <MenuItem Header="_Fichier">
                     <MenuItem x:Name="openButton" Header="_Ouvrir"/>
                     <MenuItem x:Name="addToPlaylistButton" Header="_Ajouter à la liste de lecture"/>
-                    <MenuItem x:Name="playPlaylistButton" Header="_Jouer la playlist"/>
-                    <MenuItem x:Name="closeButton" Header="_Fermer"/>
+                    <MenuItem x:Name="openPlaylistButton" Header="_Ouvrir une liste de lecture"/>
+                    <MenuItem x:Name="playPlaylistButton" Header="_Jouer la liste de lecture"/>
+                    <MenuItem x:Name="savePlaylistButton" Header="_Enregistrer la liste de lecture"/>
                     <MenuItem x:Name="recentFileButton" Header="_Fichier récents"/>
+                    <MenuItem x:Name="closeButton" Header="_Fermer"/>
                     <Separator />
                     <MenuItem x:Name="quitButton" Header="_Quitter"/>
                 </MenuItem>
